haskell-debian (3.47-2) UNRELEASED; urgency=low

  [ Erik de Castro Lopo ]
  * debian/control: Fix lintian warnings.
  * Add man pages for apt-get-build-depends, cabal-debian, debian-report and
    fakechanges.
  * Add libghc6-debian-doc.doc-base.

 -- Erik de Castro Lopo <erikd@mega-nerd.com>  Mon, 10 May 2010 09:08:20 +1000

haskell-debian (3.47-1) unstable; urgency=low

  * Initial release.

 -- Joachim Breitner <nomeata@debian.org>  Sun, 09 May 2010 19:08:20 +0200