@@ -1,0 +1,5 @@
+dist-ghc6/build/apt-get-build-depends/apt-get-build-depends		usr/bin/
+dist-ghc6/build/cabal-debian/cabal-debian						usr/bin/
+dist-ghc6/build/debian-report/debian-report						usr/bin/
+dist-ghc6/build/fakechanges/fakechanges							usr/bin/
+debian/*.1														usr/share/man/man1/
