@@ -5,6 +5,8 @@ haskell-debian (3.47-2) UNRELEASED; urgency=low
   * Add man pages for apt-get-build-depends, cabal-debian, debian-report and
     fakechanges.
   * Add libghc6-debian-doc.doc-base.
+  * Move installation of binaries and man pages from rules file to new file
+    haskell-debian-utils.install.
 
  -- Erik de Castro Lopo <erikd@mega-nerd.com>  Mon, 10 May 2010 09:08:20 +1000
 
